--- a/templates/actor/character/sheet-header.html
+++ b/templates/actor/character/sheet-header.html
@@ -87,7 +87,7 @@
         data-dtype="Number"
       />
       <span class="rule-text omen-rule rollable"
-        >{{data.system.class.omenDie}} {{ localize "MB.PerRest"}}</span
+        >{{data.system.class.system.omenDie}} {{ localize "MB.PerRest"}}</span
       >
       <button
         type="button"
