--- a/templates/actor/common/equipment-list.html
+++ b/templates/actor/common/equipment-list.html
@@ -16,29 +16,30 @@
     <img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
     <h4 class="item-name item-edit rollable">
       {{item.name}} {{#ifEq item.type 'container'}}
-      ({{item.totalContainerSpace}} / {{item.capacity}}) {{/ifEq}} {{#ifGt
-      item.quantity 1}} ({{item.quantity}}) {{/ifGt}}
+      ({{item.system.totalContainerSpace}} / {{item.system.capacity}}) {{/ifEq}}
+      {{#ifGt item.system.quantity 1}} ({{item.system.quantity}}) {{/ifGt}}
     </h4>
     <div class="item-buttons"></div>
     <div class="item-controls">
-      {{#if item.canPlusMinus}}
+      {{#if item.system.canPlusMinus}}
       <a class="item-control item-qty-plus" title="Add Quantity"
         ><i class="fas fa-plus"></i
       ></a>
       <a class="item-control item-qty-minus" title="Subtract Quantity"
         ><i class="fas fa-minus"></i
       ></a>
-      {{/if}} {{#ifNe disableCarryAndEquipButton true}} {{#if item.equippable}}
+      {{/if}} {{#ifNe disableCarryAndEquipButton true}} {{#if
+      item.system.equippable}}
       <a
-        class="item-control item-toggle item-toggle-equipped {{ifPrint item.equipped 'equipped'}}"
-        title="{{ifPrintElse item.equipped (localize 'MB.ItemEquipped') (localize 'MB.ItemUnequipped')}}"
+        class="item-control item-toggle item-toggle-equipped {{ifPrint item.system.equipped 'equipped'}}"
+        title="{{ifPrintElse item.system.equipped (localize 'MB.ItemEquipped') (localize 'MB.ItemUnequipped')}}"
       >
         <i class="fas fa-shield-alt"></i
       ></a>
-      {{/if}} {{#if item.droppable}}
+      {{/if}} {{#if item.system.droppable}}
       <a
-        class="item-control item-toggle item-toggle-carried {{ifPrint item.carried 'carried'}}"
-        title="{{ifPrintElse item.carried (localize 'MB.ItemCarried') (localize 'MB.ItemDropped')}}"
+        class="item-control item-toggle item-toggle-carried {{ifPrint item.system.carried 'carried'}}"
+        title="{{ifPrintElse item.system.carried (localize 'MB.ItemCarried') (localize 'MB.ItemDropped')}}"
       >
         <i class="fas fa-user-check"></i
       ></a>
@@ -52,8 +53,8 @@
     </div>
   </li>
   {{/inline}} {{#each data.system.equipment as |item id|}} {{> item-row
-  item=item}} {{#ifEq item.type 'container'}} {{#each item.itemsData as |item|}}
-  {{> item-row item=item class="item-container-item"
+  item=item}} {{#ifEq item.type 'container'}} {{#each item.system.itemsData as
+  |item|}} {{> item-row item=item class="item-container-item"
   disableCarryAndEquipButton=true}} {{else}}
   <li class="item empty-container" data-item-id="{{item._id}}">
     <div class="rule-text">{{localize 'MB.ContainerEmptyHelpText'}}</div>
