Fix containers for v10.

--- a/templates/actor/common/equipment-list.html
+++ b/templates/actor/common/equipment-list.html
@@ -31,15 +31,15 @@
       {{/if}} {{#ifNe disableCarryAndEquipButton true}} {{#if
       item.system.equippable}}
       <a
-        class="item-control item-toggle item-toggle-equipped {{ifPrint item.system.equipped 'equipped'}}"
-        title="{{ifPrintElse item.system.equipped (localize 'MB.ItemEquipped') (localize 'MB.ItemUnequipped')}}"
+        class="item-control item-toggle item-toggle-equipped {{ifPrint item.equipped 'equipped'}}"
+        title="{{ifPrintElse item.equipped (localize 'MB.ItemEquipped') (localize 'MB.ItemUnequipped')}}"
       >
         <i class="fas fa-shield-alt"></i
       ></a>
       {{/if}} {{#if item.system.droppable}}
       <a
-        class="item-control item-toggle item-toggle-carried {{ifPrint item.system.carried 'carried'}}"
-        title="{{ifPrintElse item.system.carried (localize 'MB.ItemCarried') (localize 'MB.ItemDropped')}}"
+        class="item-control item-toggle item-toggle-carried {{ifPrint item.carried 'carried'}}"
+        title="{{ifPrintElse item.carried (localize 'MB.ItemCarried') (localize 'MB.ItemDropped')}}"
       >
         <i class="fas fa-user-check"></i
       ></a>
