DRY up armor tiers. Fix equipped shield on equipment list.

--- a/templates/actor/common/equipment-list.html
+++ b/templates/actor/common/equipment-list.html
@@ -31,8 +31,8 @@
       {{/if}} {{#ifNe disableCarryAndEquipButton true}} {{#if
       item.system.equippable}}
       <a
-        class="item-control item-toggle item-toggle-equipped {{ifPrint item.equipped 'equipped'}}"
-        title="{{ifPrintElse item.equipped (localize 'MB.ItemEquipped') (localize 'MB.ItemUnequipped')}}"
+        class="item-control item-toggle item-toggle-equipped {{ifPrint item.system.equipped 'equipped'}}"
+        title="{{ifPrintElse item.system.equipped (localize 'MB.ItemEquipped') (localize 'MB.ItemUnequipped')}}"
       >
         <i class="fas fa-shield-alt"></i
       ></a>
