--- a/templates/actor/common/violence-tab.html
+++ b/templates/actor/common/violence-tab.html
@@ -117,46 +117,22 @@
                 >{{ localize "MB.Tier" }}:</label
               >
               <ul class="tiers">
+                {{#each config.armorTiers as |tierObj tierNum|}}
                 <li>
                   <label
                     ><input class="tier-radio" type="radio" name="tier.value"
-                    value="0" {{#ifEq
-                    data.system.equippedArmor.system.tier.value
-                    0}}checked{{/ifEq}}/><span class="tier-num">0</span
-                    ><span class="tier-dmg">-0</span></label
+                    value="{{tierNum}}" {{#ifEq
+                    ../data.system.equippedArmor.system.tier.value
+                    tierNum}}checked{{/ifEq}} {{#ifLt
+                    ../data.system.equippedArmor.system.tier.max
+                    tierNum}}disabled="true"{{/ifLt}}/><span class="tier-num"
+                      >{{tierNum}}</span
+                    ><span class="tier-dmg"
+                      >-{{tierObj.damageReductionDie}}</span
+                    ></label
                   >
                 </li>
-                <li>
-                  <label
-                    ><input class="tier-radio" type="radio" name="tier.value"
-                    value="1" {{#ifEq
-                    data.system.equippedArmor.system.tier.value
-                    1}}checked{{/ifEq}}/><span class="tier-num">1</span
-                    ><span class="tier-dmg">-d2</span></label
-                  >
-                </li>
-                <li>
-                  <label
-                    ><input class="tier-radio" type="radio" name="tier.value"
-                    value="2" {{#ifEq
-                    data.system.equippedArmor.system.tier.value
-                    2}}checked{{/ifEq}} {{#ifLt
-                    data.system.equippedArmor.system.tier.max
-                    2}}disabled="true"{{/ifLt}}/><span class="tier-num">2</span
-                    ><span class="tier-dmg">-d4</span></label
-                  >
-                </li>
-                <li>
-                  <label
-                    ><input class="tier-radio" type="radio" name="tier.value"
-                    value="3" {{#ifEq
-                    data.system.equippedArmor.system.tier.value
-                    3}}checked{{/ifEq}} {{#ifLt
-                    data.system.equippedArmor.system.tier.max
-                    3}}disabled="true"{{/ifLt}}/><span class="tier-num">3</span
-                    ><span class="tier-dmg">-d6</span></label
-                  >
-                </li>
+                {{/each}}
               </ul>
             </div>
           </div>
