Fix editor-content padding-top.

--- a/css/morkborg.css
+++ b/css/morkborg.css
@@ -118,6 +118,7 @@
 .morkborg .editor,
 .morkborg .editor-content {
   height: 100%;
+  padding-top: 10px;
 }
 .morkborg .button {
   background: var(--foreground-color);
