--- a/templates/actor/character/treasures-tab.hbs
+++ b/templates/actor/character/treasures-tab.hbs
@@ -13,9 +13,7 @@
     </div>
     <div class="carry-block">
       <div>
-        <span class="stat-label carrying-label"
-          >{{ localize "MB.Carrying" }}:</span
-        >
+        <span class="stat-label carrying-label">{{ localize "MB.Carrying" }}:</span>
         <span class="stat-value">{{data.system.carryingWeight}}</span>
         /
         <span class="stat-value">{{data.system.carryingCapacity}}</span>
