--- a/templates/actor/follower-sheet.hbs
+++ b/templates/actor/follower-sheet.hbs
@@ -48,9 +48,7 @@
 
   {{!-- Sheet Tab Navigation --}}
   <nav class="sheet-tabs tabs" data-group="primary">
-    <a class="item" data-tab="description"
-      >{{ localize "MB.TabDescription" }}</a
-    >
+    <a class="item" data-tab="description">{{ localize "MB.TabDescription" }}</a>
     <a class="item" data-tab="details">{{ localize "MB.TabDetails" }}</a>
     <a class="item" data-tab="violence">{{ localize "MB.TabViolence" }}</a>
     <a class="item" data-tab="treasures">{{ localize "MB.TabTreasures" }}</a>
@@ -133,7 +131,7 @@
         </div>
       </div>
       <ol class="items-list equipment-list">
-        {{> "systems/morkborg/templates/actor/common/equipment-list.html"}}
+        {{> "systems/morkborg/templates/actor/common/equipment-list.html" }}
       </ol>
     </div>
   </section>
