--- a/templates/actor/character-sheet.hbs
+++ b/templates/actor/character-sheet.hbs
@@ -1,6 +1,7 @@
 <form class="{{cssClass}} flexcol" autocomplete="off">
-  {{> systems/morkborg/templates/actor/character/sheet-header.html }} {{!--
-  Sheet Tab Navigation --}}
+  {{> systems/morkborg/templates/actor/character/sheet-header.html }} 
+  
+  {{!-- Sheet Tab Navigation --}}
   <nav class="sheet-tabs tabs" data-group="primary">
     <a class="item" data-tab="obituary">{{ localize 'MB.TabObituary' }}</a>
     <a class="item" data-tab="violence">{{ localize 'MB.TabViolence' }}</a>
@@ -11,10 +12,10 @@
 
   {{!-- Sheet Body --}}
   <section class="sheet-body">
-    {{> systems/morkborg/templates/actor/character/obituary-tab.html }} {{>
-    systems/morkborg/templates/actor/common/violence-tab.html }} {{>
-    systems/morkborg/templates/actor/character/feats-tab.html }} {{>
-    systems/morkborg/templates/actor/character/powers-tab.html }} {{>
-    systems/morkborg/templates/actor/character/treasures-tab.html }}
+    {{> systems/morkborg/templates/actor/character/obituary-tab.hbs }} 
+    {{> systems/morkborg/templates/actor/common/violence-tab.hbs }} 
+    {{> systems/morkborg/templates/actor/character/feats-tab.hbs }} 
+    {{> systems/morkborg/templates/actor/character/powers-tab.hbs }}
+    {{> systems/morkborg/templates/actor/character/treasures-tab.hbs }}
   </section>
 </form>
