--- a/templates/actor/character/powers-tab.hbs
+++ b/templates/actor/character/powers-tab.hbs
@@ -6,16 +6,12 @@
       <button type="button" class="rollable wield-power-button">
         {{localize "MB.WieldAPower"}}
       </button>
-      <span class="rule-text wield-rule"
-        >{{localize 'MB.WieldAPowerText'}}</span
-      >
+      <span class="rule-text wield-rule">{{localize 'MB.WieldAPowerText'}}</span>
     </div>
     <div class="powers-gutter"></div>
     <div class="uses-remaining">
       <div>
-        <label class="stat-label uses-remaining-label"
-          >{{localize "MB.PowerUsesRemaining"}}:</label
-        >
+        <label class="stat-label uses-remaining-label">{{localize "MB.PowerUsesRemaining"}}:</label>
         <input
           class="stat-input"
           name="sysem.powerUses.value"
@@ -24,9 +20,7 @@
           data-dtype="Number"
         />
       </div>
-      <span class="rule-text rollable powers-per-day-text"
-        >{{localize "MB.PowersPerDayText"}}</span
-      >
+      <span class="rule-text rollable powers-per-day-text">{{localize "MB.PowersPerDayText"}}</span>
     </div>
   </div>
   <ol class="items-list inventory-list">
