--- a/templates/actor/creature-sheet.hbs
+++ b/templates/actor/creature-sheet.hbs
@@ -51,9 +51,7 @@
 
   {{!-- Sheet Tab Navigation --}}
   <nav class="sheet-tabs tabs" data-group="primary">
-    <a class="item" data-tab="description"
-      >{{ localize "MB.TabDescription" }}</a
-    >
+    <a class="item" data-tab="description">{{ localize "MB.TabDescription" }}</a>
     <a class="item" data-tab="details">{{ localize "MB.TabDetails" }}</a>
   </nav>
 
@@ -106,9 +104,7 @@
       {{!-- Special --}}
       <div class="form-group">
         <label>{{ localize "MB.CreatureSpecial" }}:</label>
-        <textarea name="system.special" rows="10">
-{{data.system.special}}</textarea
-        >
+        <textarea name="system.special" rows="10">{{data.system.special}}</textarea>
       </div>
     </div>
   </section>
