--- a/templates/item/class-sheet.hbs
+++ b/templates/item/class-sheet.hbs
@@ -1,6 +1,7 @@
 <form class="flexcol {{cssClass}}" autocomplete="off">
-  {{> systems/morkborg/templates/item/common/sheet-header.html }} {{!-- Sheet
-  Tab Navigation --}}
+  {{> systems/morkborg/templates/item/common/sheet-header.html }} 
+  
+  {{!-- Sheet Tab Navigation --}}
   <nav class="sheet-tabs tabs" data-group="primary">
     <a class="item" data-tab="abilities">{{ localize "MB.Abilities" }}</a>
     <a class="item" data-tab="details">{{ localize "MB.TabDetails" }}</a>
@@ -131,15 +132,11 @@
       </div>
       <div class="form-group">
         <label>{{ localize "MB.Items" }}:</label>
-        <textarea name="system.startingItems" rows="4">
-{{data.system.startingItems}}</textarea
-        >
+        <textarea name="system.startingItems" rows="4">{{data.system.startingItems}}</textarea>
       </div>
       <div class="form-group">
         <label>{{ localize "MB.Rolls" }}:</label>
-        <textarea name="system.startingRolls" rows="4">
-{{data.system.startingRolls}}</textarea
-        >
+        <textarea name="system.startingRolls" rows="4">{{data.system.startingRolls}}</textarea>
       </div>
     </div>
   </section>
