Move remaining html templates to hbs.

--- a/templates/actor/character-sheet.hbs
+++ b/templates/actor/character-sheet.hbs
@@ -1,5 +1,5 @@
 <form class="{{cssClass}} flexcol" autocomplete="off">
-  {{> systems/morkborg/templates/actor/character/sheet-header.html }} 
+  {{> systems/morkborg/templates/actor/character/sheet-header.hbs }} 
   
   {{!-- Sheet Tab Navigation --}}
   <nav class="sheet-tabs tabs" data-group="primary">
