--- a/templates/actor/character/treasures-tab.hbs
+++ b/templates/actor/character/treasures-tab.hbs
@@ -28,6 +28,6 @@
     </div>
   </div>
   <ol class="items-list equipment-list">
-    {{> "systems/morkborg/templates/actor/common/equipment-list.html"}}
+    {{> "systems/morkborg/templates/actor/common/equipment-list.hbs"}}
   </ol>
 </div>
