--- a/templates/actor/follower-sheet.hbs
+++ b/templates/actor/follower-sheet.hbs
@@ -113,7 +113,7 @@
       </div>
     </div>
 
-    {{> systems/morkborg/templates/actor/common/violence-tab.html }} {{!--
+    {{> systems/morkborg/templates/actor/common/violence-tab.hbs }} {{!--
     Treasures Tab --}}
     <div class="tab equipment-tab" data-group="primary" data-tab="treasures">
       <div class="equipment-top-row">
@@ -131,7 +131,7 @@
         </div>
       </div>
       <ol class="items-list equipment-list">
-        {{> "systems/morkborg/templates/actor/common/equipment-list.html" }}
+        {{> "systems/morkborg/templates/actor/common/equipment-list.hbs" }}
       </ol>
     </div>
   </section>
