--- a/templates/item/class-sheet.hbs
+++ b/templates/item/class-sheet.hbs
@@ -1,5 +1,5 @@
 <form class="flexcol {{cssClass}}" autocomplete="off">
-  {{> systems/morkborg/templates/item/common/sheet-header.html }} 
+  {{> systems/morkborg/templates/item/common/sheet-header.hbs }} 
   
   {{!-- Sheet Tab Navigation --}}
   <nav class="sheet-tabs tabs" data-group="primary">
