--- a/templates/item/ammo-sheet.hbs
+++ b/templates/item/ammo-sheet.hbs
@@ -1,14 +1,14 @@
 <form class="flexcol {{cssClass}}" autocomplete="off">
   {{> systems/morkborg/templates/item/common/sheet-header.hbs }}
-  {{> systems/morkborg/templates/item/common/sheet-tabs.html }}
+  {{> systems/morkborg/templates/item/common/sheet-tabs.hbs }}
 
   <section class="sheet-body">
     {{> systems/morkborg/templates/item/common/description-tab.hbs }} 
     
     {{!-- Details Tab --}}
     <div class="tab" data-group="primary" data-tab="details">
-      {{> systems/morkborg/templates/item/common/base-fields.html }} 
-      {{> systems/morkborg/templates/item/common/quantity-field.html }}
+      {{> systems/morkborg/templates/item/common/base-fields.hbs }} 
+      {{> systems/morkborg/templates/item/common/quantity-field.hbs }}
     </div>
   </section>
 </form>
